# cli-yt-downloader

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/clap_cli/: clap.rs
src/downloader/: downloader.rs
src/video_utils/: downloader.rs  ffmpeg.rs  general_utils.rs  mod.rs  yt_dlp_binary.rs  yt_dlp_test.rs  yt_downloader.rs
