[package]
name = "cli_yt_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rustube = {version = "0.6.0", features = ["callback"]}
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = {version = "1.11.0", features = ["full"] }
indicatif = "0.16"
home = "0.5.9"
directories = "5.0.1"
regex = "1.10.4"
url = "2.5.0"
